--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,3 +6,4 @@ edition = "2024"
 [dependencies]
 embedded-io = "0.6.1"
 embedded-io-async = "0.6.1"
+futures-core = { version = "0.3.31", default-features = false }
